; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp9_mc_msa.c_ff_avg_bilin_16v_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp9_mc_msa.c_ff_avg_bilin_16v_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vp9_bilinear_filters_msa = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_avg_bilin_16v_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  %17 = alloca i64, align 8
  %18 = alloca i64, align 8
  %19 = alloca i64, align 8
  %20 = alloca i64, align 8
  %21 = alloca i64, align 8
  %22 = alloca i64, align 8
  %23 = alloca i64, align 8
  %24 = alloca i64, align 8
  %25 = alloca i64, align 8
  %26 = alloca i64, align 8
  %27 = alloca i64, align 8
  %28 = alloca i64, align 8
  %29 = alloca i64, align 8
  %30 = alloca i64, align 8
  %31 = alloca i64, align 8
  %32 = alloca i64, align 8
  %33 = alloca i64, align 8
  %34 = alloca i64, align 8
  %35 = alloca i64, align 8
  %36 = alloca i64, align 8
  %37 = alloca i64, align 8
  %38 = alloca i64, align 8
  %39 = alloca i64, align 8
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32* %2, i32** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %40 = load i32**, i32*** @vp9_bilinear_filters_msa, align 8
  %41 = load i32, i32* %14, align 4
  %42 = sub nsw i32 %41, 1
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds i32*, i32** %40, i64 %43
  %45 = load i32*, i32** %44, align 8
  store i32* %45, i32** %16, align 8
  %46 = load i32*, i32** %16, align 8
  %47 = call i64 @LD_UH(i32* %46)
  store i64 %47, i64* %39, align 8
  %48 = load i64, i64* %39, align 8
  %49 = trunc i64 %48 to i32
  %50 = call i64 @__msa_splati_h(i32 %49, i32 0)
  store i64 %50, i64* %26, align 8
  %51 = load i32*, i32** %10, align 8
  %52 = call i64 @LD_UB(i32* %51)
  store i64 %52, i64* %17, align 8
  %53 = load i32, i32* %11, align 4
  %54 = load i32*, i32** %10, align 8
  %55 = sext i32 %53 to i64
  %56 = getelementptr inbounds i32, i32* %54, i64 %55
  store i32* %56, i32** %10, align 8
  %57 = load i32, i32* %12, align 4
  %58 = ashr i32 %57, 2
  store i32 %58, i32* %15, align 4
  br label %59

59:                                               ; preds = %63, %7
  %60 = load i32, i32* %15, align 4
  %61 = add nsw i32 %60, -1
  store i32 %61, i32* %15, align 4
  %62 = icmp ne i32 %60, 0
  br i1 %62, label %63, label %200

63:                                               ; preds = %59
  %64 = load i32*, i32** %10, align 8
  %65 = load i32, i32* %11, align 4
  %66 = load i64, i64* %18, align 8
  %67 = load i64, i64* %19, align 8
  %68 = load i64, i64* %20, align 8
  %69 = load i64, i64* %21, align 8
  %70 = call i32 @LD_UB4(i32* %64, i32 %65, i64 %66, i64 %67, i64 %68, i64 %69)
  %71 = load i32, i32* %11, align 4
  %72 = mul nsw i32 4, %71
  %73 = load i32*, i32** %10, align 8
  %74 = sext i32 %72 to i64
  %75 = getelementptr inbounds i32, i32* %73, i64 %74
  store i32* %75, i32** %10, align 8
  %76 = load i32*, i32** %8, align 8
  %77 = load i32, i32* %9, align 4
  %78 = load i64, i64* %22, align 8
  %79 = load i64, i64* %23, align 8
  %80 = load i64, i64* %24, align 8
  %81 = load i64, i64* %25, align 8
  %82 = call i32 @LD_UB4(i32* %76, i32 %77, i64 %78, i64 %79, i64 %80, i64 %81)
  %83 = load i64, i64* %18, align 8
  %84 = load i64, i64* %17, align 8
  %85 = load i64, i64* %19, align 8
  %86 = load i64, i64* %18, align 8
  %87 = load i64, i64* %27, align 8
  %88 = load i64, i64* %29, align 8
  %89 = call i32 @ILVR_B2_UB(i64 %83, i64 %84, i64 %85, i64 %86, i64 %87, i64 %88)
  %90 = load i64, i64* %18, align 8
  %91 = load i64, i64* %17, align 8
  %92 = load i64, i64* %19, align 8
  %93 = load i64, i64* %18, align 8
  %94 = load i64, i64* %28, align 8
  %95 = load i64, i64* %30, align 8
  %96 = call i32 @ILVL_B2_UB(i64 %90, i64 %91, i64 %92, i64 %93, i64 %94, i64 %95)
  %97 = load i64, i64* %27, align 8
  %98 = load i64, i64* %28, align 8
  %99 = load i64, i64* %26, align 8
  %100 = load i64, i64* %26, align 8
  %101 = load i64, i64* %35, align 8
  %102 = load i64, i64* %36, align 8
  %103 = call i32 @DOTP_UB2_UH(i64 %97, i64 %98, i64 %99, i64 %100, i64 %101, i64 %102)
  %104 = load i64, i64* %35, align 8
  %105 = load i64, i64* %36, align 8
  %106 = call i32 @SRARI_H2_UH(i64 %104, i64 %105, i32 7)
  %107 = load i64, i64* %35, align 8
  %108 = load i64, i64* %36, align 8
  %109 = call i32 @SAT_UH2_UH(i64 %107, i64 %108, i32 7)
  %110 = load i64, i64* %36, align 8
  %111 = load i64, i64* %35, align 8
  %112 = load i64, i64* %22, align 8
  %113 = load i32*, i32** %8, align 8
  %114 = call i32 @PCKEV_AVG_ST_UB(i64 %110, i64 %111, i64 %112, i32* %113)
  %115 = load i32, i32* %9, align 4
  %116 = load i32*, i32** %8, align 8
  %117 = sext i32 %115 to i64
  %118 = getelementptr inbounds i32, i32* %116, i64 %117
  store i32* %118, i32** %8, align 8
  %119 = load i64, i64* %20, align 8
  %120 = load i64, i64* %19, align 8
  %121 = load i64, i64* %21, align 8
  %122 = load i64, i64* %20, align 8
  %123 = load i64, i64* %31, align 8
  %124 = load i64, i64* %33, align 8
  %125 = call i32 @ILVR_B2_UB(i64 %119, i64 %120, i64 %121, i64 %122, i64 %123, i64 %124)
  %126 = load i64, i64* %20, align 8
  %127 = load i64, i64* %19, align 8
  %128 = load i64, i64* %21, align 8
  %129 = load i64, i64* %20, align 8
  %130 = load i64, i64* %32, align 8
  %131 = load i64, i64* %34, align 8
  %132 = call i32 @ILVL_B2_UB(i64 %126, i64 %127, i64 %128, i64 %129, i64 %130, i64 %131)
  %133 = load i64, i64* %29, align 8
  %134 = load i64, i64* %30, align 8
  %135 = load i64, i64* %26, align 8
  %136 = load i64, i64* %26, align 8
  %137 = load i64, i64* %37, align 8
  %138 = load i64, i64* %38, align 8
  %139 = call i32 @DOTP_UB2_UH(i64 %133, i64 %134, i64 %135, i64 %136, i64 %137, i64 %138)
  %140 = load i64, i64* %37, align 8
  %141 = load i64, i64* %38, align 8
  %142 = call i32 @SRARI_H2_UH(i64 %140, i64 %141, i32 7)
  %143 = load i64, i64* %37, align 8
  %144 = load i64, i64* %38, align 8
  %145 = call i32 @SAT_UH2_UH(i64 %143, i64 %144, i32 7)
  %146 = load i64, i64* %38, align 8
  %147 = load i64, i64* %37, align 8
  %148 = load i64, i64* %23, align 8
  %149 = load i32*, i32** %8, align 8
  %150 = call i32 @PCKEV_AVG_ST_UB(i64 %146, i64 %147, i64 %148, i32* %149)
  %151 = load i32, i32* %9, align 4
  %152 = load i32*, i32** %8, align 8
  %153 = sext i32 %151 to i64
  %154 = getelementptr inbounds i32, i32* %152, i64 %153
  store i32* %154, i32** %8, align 8
  %155 = load i64, i64* %31, align 8
  %156 = load i64, i64* %32, align 8
  %157 = load i64, i64* %26, align 8
  %158 = load i64, i64* %26, align 8
  %159 = load i64, i64* %35, align 8
  %160 = load i64, i64* %36, align 8
  %161 = call i32 @DOTP_UB2_UH(i64 %155, i64 %156, i64 %157, i64 %158, i64 %159, i64 %160)
  %162 = load i64, i64* %35, align 8
  %163 = load i64, i64* %36, align 8
  %164 = call i32 @SRARI_H2_UH(i64 %162, i64 %163, i32 7)
  %165 = load i64, i64* %35, align 8
  %166 = load i64, i64* %36, align 8
  %167 = call i32 @SAT_UH2_UH(i64 %165, i64 %166, i32 7)
  %168 = load i64, i64* %36, align 8
  %169 = load i64, i64* %35, align 8
  %170 = load i64, i64* %24, align 8
  %171 = load i32*, i32** %8, align 8
  %172 = call i32 @PCKEV_AVG_ST_UB(i64 %168, i64 %169, i64 %170, i32* %171)
  %173 = load i32, i32* %9, align 4
  %174 = load i32*, i32** %8, align 8
  %175 = sext i32 %173 to i64
  %176 = getelementptr inbounds i32, i32* %174, i64 %175
  store i32* %176, i32** %8, align 8
  %177 = load i64, i64* %33, align 8
  %178 = load i64, i64* %34, align 8
  %179 = load i64, i64* %26, align 8
  %180 = load i64, i64* %26, align 8
  %181 = load i64, i64* %37, align 8
  %182 = load i64, i64* %38, align 8
  %183 = call i32 @DOTP_UB2_UH(i64 %177, i64 %178, i64 %179, i64 %180, i64 %181, i64 %182)
  %184 = load i64, i64* %37, align 8
  %185 = load i64, i64* %38, align 8
  %186 = call i32 @SRARI_H2_UH(i64 %184, i64 %185, i32 7)
  %187 = load i64, i64* %37, align 8
  %188 = load i64, i64* %38, align 8
  %189 = call i32 @SAT_UH2_UH(i64 %187, i64 %188, i32 7)
  %190 = load i64, i64* %38, align 8
  %191 = load i64, i64* %37, align 8
  %192 = load i64, i64* %25, align 8
  %193 = load i32*, i32** %8, align 8
  %194 = call i32 @PCKEV_AVG_ST_UB(i64 %190, i64 %191, i64 %192, i32* %193)
  %195 = load i32, i32* %9, align 4
  %196 = load i32*, i32** %8, align 8
  %197 = sext i32 %195 to i64
  %198 = getelementptr inbounds i32, i32* %196, i64 %197
  store i32* %198, i32** %8, align 8
  %199 = load i64, i64* %21, align 8
  store i64 %199, i64* %17, align 8
  br label %59

200:                                              ; preds = %59
  ret void
}

declare dso_local i64 @LD_UH(i32*) #1

declare dso_local i64 @__msa_splati_h(i32, i32) #1

declare dso_local i64 @LD_UB(i32*) #1

declare dso_local i32 @LD_UB4(i32*, i32, i64, i64, i64, i64) #1

declare dso_local i32 @ILVR_B2_UB(i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @ILVL_B2_UB(i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @DOTP_UB2_UH(i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @SRARI_H2_UH(i64, i64, i32) #1

declare dso_local i32 @SAT_UH2_UH(i64, i64, i32) #1

declare dso_local i32 @PCKEV_AVG_ST_UB(i64, i64, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
